--- a/Sisters.Html
+++ b/Sisters.Html
@@ -18,7 +18,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="sister frame.png">
+        <img src="poemphoto.jpeg">
 
         <div>
             <h1><em>Keeping It Together - Randy McDermit&nbsp;&nbsp;</em></h1>
